* 2014-09-29 - thorben.betten@open-xchange.com

 - Fix for bug 34668: Special handling for Windows IE 11 Browser in session management

* 2014-09-28 - thorben.betten@open-xchange.com

 - Fix for bug 34617: Signal proper write permission in case "ENABLE_INTERNAL_USER_EDIT" is set to "false"
 - Fix for bug 34656: Use proper cache region name to not silently fall-back to default one

* 2014-09-26 - jan.bauerdick@open-xchange.com

 - Fix for bug 34652: Invalidate context cache when moving filestore

* 2014-09-26 - thorben.betten@open-xchange.com

 - Fix for bug 34465: Fixed update for POP3 mail accounts

* 2014-09-25 - thorben.betten@open-xchange.com

 - Fix for bug 34623: Pass null references for user/password arguments in case SMTP authentication is explicitly disabled
 - Fix for bug 34633: Added "UserPermissionBits" cache region to cache configuration to orderly align to cache usage and to disable lateral
                      distribution of its cache elements

* 2014-09-25 - jan.bauerdick@open-xchange.com

 - Fix for bug 34622: Added missing userId-check in ContextSetConfigProvider

* 2014-09-25 - tobias.friedrich@open-xchange.com

 - Fix for bug 34592: Check for potential client-side changes in the subdirectory tree before instructing to remove a directory

* 2014-09-24 - tobias.friedrich@open-xchange.com

 - Fix for bug 34561: Introduced various checks to prevent synchronization of equally named files and folders at the same level of the
                      folder hierarchy

* 2014-09-24 - martin.schneider@open-xchange.com

 - Fix for bug 34579: Do not validate account if primary mail account is provided

* 2014-09-24 - thorben.betten@open-xchange.com

 - Fix for bug 34571: Fixed logging arguments for IMAP-IDLE
 - Fix for bug 34581: Stick to v2.0 of the Facebook Graph API

* 2014-09-23 - marcus.klein@open-xchange.com

 - Fix for bug 34454: Fixed dependencies on open-xchange-system package to ensure smooth upgrade.

* 2014-09-22 - jan.bauerdick@open-xchange.com